Final submit, problems fixed

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,10 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+params.p
+.ipynb_checkpoints/dlnd_tv_script_generation-checkpoint.ipynb
+save.data-00000-of-00001
+save.index
+save.meta
+.ipynb_checkpoints/dlnd_tv_script_generation-checkpoint.ipynb
+.ipynb_checkpoints/dlnd_tv_script_generation-checkpoint.ipynb
